# django-diagnostic

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  RELEASE.md  prek.toml  pyproject.toml  requirements.txt  requirements_dev.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yaml  dependabot.yml
.github/workflows/: bump.yaml  lint.yaml  lint.yml  ruff.yaml  tests.yaml
django_diagnostic/: __init__.py  apps.py  decorators.py  urls.py  views.py
django_diagnostic/templates/django_diagnostic/: celery.html  celery_results_summary.html  database_postgresql.html  debug.html  demo.html  devops.html  environment.html  git.html  index.html  manifest.html  registry.html  sessions.html  settings.html
docs/: changelog.rst  conf.py  index.rst  installation.rst  usage.rst
requirements/: pip_compile.ps1  pip_compile.sh  requirements-dev-win.txt  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  requirements.in  requirements.txt
tests/: settings.py  test_dispatcher.py  test_models.py  test_registry_view.py  urls.py
tests/templates/: base.html
