[project]
name = "django-diagnostic"
description = "Provides diagnostic pages for a Django application"
authors = [{name = "DXCLABS LTD"}]
version = "1.8.0"
requires-python = ">=3.12,<4.0"

dependencies = [
  "Django>=5.2.14,<6.0",
  "psycopg2-binary>=2.9.11",
  "django-braces>=1.15.0"
]

[project.optional-dependencies]
git = ["GitPython>=3.1.27"]
celery_results = ["django-celery-results>=2.6.0"]

[tool.autopub]
project-name = "django-diagnostic"
git-username = "ci-bot-dxclabs"
git-email = "183820094+ci-bot-dxclabs@users.noreply.github.com"
changelog-file = "docs/changelog.rst"
changelog-header = "###############"
version-header = "="
version-strings = ["django_diagnostic/__init__.py"]
build-system = "hatchling"


[tool.coverage.run]
source = ["django_diagnostic"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
omit = [
    "**/tests/*",
    "**/migrations/*",
]


[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test requiring external resources",
    "allow_socket: allow socket access for a test",
]

DJANGO_SETTINGS_MODULE = "tests.settings"

python_files = [
  "tests.py",
  "test_*.py",
  "*_tests.py"
]


[tool.ruff]
target-version = "py312"
extend-exclude = ["migrations", "squashed_migrations"]
line-length = 88

[tool.ruff.lint]
select = [
  "A", "ANN", "ARG", "B", "BLE001", "C4", "C90", "DTZ", "E", "EXE", "F",
  "FBT", "G", "I", "INT", "ISC", "PTH", "Q", "RSE", "RET", "S", "SIM",
  "SLF", "T10", "T20", "UP"
]
# Disable missing *args, **kwargs annotation check
ignore = ["ISC001", "ANN002", "ANN003"]

unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/tests/*.py" = ["ANN001", "ARG001", "S101"]


[tool.ty]

[tool.ty.environment]
root = ["."]


[dependency-groups]
linters = [
    "codespell>=2.4.1",
    "django-upgrade>=1.29.1",
    "pyupgrade>=3.21.2",
    "ruff>=0.14.9",
    "ty>=0.0.35",
]
tests = [
    "coverage>=7.13.0",
    "django-nose>=1.4.7",
    "factory-boy>=3.3.3",
    "mock>=5.2.0",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "pytest-socket>=0.7.0",
]
dev = [
    "autopub>=0.4.1",
    "boto3-stubs>=1.42.9",
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1.0",
    "django-snippetscream>=0.0.7",
    "djlint>=1.36.4",
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "polib>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["django_diagnostic"]
